<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/catskillWhite"
    android:clickable="true">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/H3.Trout50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="@id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/profileImageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/shape_white_top_left_right_30_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/defaultViewMargin"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="@dimen/defaultViewMargin"
            android:background="@drawable/bg_catskillwhite30_10_radius"
            android:hint="@string/name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/countryConstraintLayout"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_catskillwhite30_10_radius"
            app:layout_constraintStart_toStartOf="@id/nameEditText"
            app:layout_constraintTop_toBottomOf="@id/nameEditText">

            <ImageView
                android:id="@+id/thaiFlagImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_thai_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/countryCodeTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countryCodeTextView"
                style="@style/H3.Trout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"
                android:text="+66"
                app:layout_constraintBottom_toBottomOf="@+id/thaiFlagImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/thaiFlagImageView"
                app:layout_constraintTop_toTopOf="@+id/thaiFlagImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_catskillwhite30_10_radius"
            android:hint="@string/phone_number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/countryConstraintLayout"
            app:layout_constraintEnd_toEndOf="@id/nameEditText"
            app:layout_constraintStart_toEndOf="@id/countryConstraintLayout"
            app:layout_constraintTop_toTopOf="@id/countryConstraintLayout" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_catskillwhite30_10_radius"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumberEditText"
            app:layout_constraintStart_toStartOf="@+id/countryConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/countryConstraintLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionButton"
            style="@style/MaterialTextButton.H1.CoralitoWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/defaultButtonHeight"
            android:layout_margin="@dimen/defaultViewMargin"
            android:layout_marginTop="@dimen/defaultViewMargin"
            android:text="@string/delete_account"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>